add admin panel

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,15 +1,15 @@
 {
-  "welcome_caption": "👋 <b>Welcome to OtterChatbot!</b>\n\nI can help you find a chat partner anonymously based on your mood and preferences.\n\n✨ <b>Features:</b>\n• 🎭 Choose your Mood\n• 🌍 Filter by Country\n• 🔒 100% Anonymous\n\n<i>Tap a button below to start:</i>",
-  "welcome_back": "👋 Welcome back, <b>%s</b>! What would you like to do today?",
-  "ask_gender": "👤 <b>Identity Setup</b>\nFirst, please select your <b>Gender</b>:",
+  "welcome_caption": "👋 <b>Welcome to OtterChatbot!</b>\n\nI can help you find a chat partner anonymously.\n\n<i>Tap a button below to start:</i>",
+  "welcome_back": "👋 Welcome back, <b>%s</b>!",
+  "ask_gender": "👤 <b>Identity</b>\nSelect your <b>Gender</b>:",
   "ask_preference": "👀 <b>Preferences</b>\nWho do you want to chat with?",
-  "ask_location": "📍 <b>Location Setup</b>\nSelect your Country to find local partners:",
+  "ask_location": "📍 <b>Location</b>\nSelect your Country:",
   "location_saved": "✅ Location updated: <b>%s</b>",
-  "ask_lang": "🌐 <b>Language Settings</b>\nSelect your interface language:",
+  "ask_lang": "🌐 <b>Language</b>\nSelect interface language:",
   "btn_search": "🔍 Search Partner",
-  "btn_profile": "👤 My Profile",
-  "btn_about": "ℹ️ About Bot",
-  "btn_help": "❓ Help",
+  "btn_profile": "👤 Profile",
+  "btn_vip": "🌟 VIP Access",
+  "btn_help": "❓ Help Center",
   "btn_male": "👨 Male",
   "btn_female": "👩 Female",
   "btn_both": "👫 Both",
@@ -18,19 +18,29 @@
   "btn_edit_loc": "📍 Location",
   "btn_lang": "🌐 Language",
   "btn_back": "🔙 Back",
-  "profile_view": "👤 <b>USER PROFILE</b>\n━━━━━━━━━━━━\n🆔 <b>Name:</b> %s\n⚧ <b>Gender:</b> %s\n👀 <b>Looking for:</b> %s\n📍 <b>Location:</b> %s\n💎 <b>Status:</b> %s\n━━━━━━━━━━━━",
-  "setup_complete": "✅ <b>Setup Complete!</b>\nUse /search to find a partner.",
-  "select_mood": "🎭 <b>Select Mood</b>\nChoose a topic to find a partner:",
+  "btn_reconnect": "🔄 Reconnect (VIP)",
+  "btn_contact_admin": "📩 Contact Admin",
+  "profile_view": "👤 <b>MY PROFILE</b>\n\n🆔 <code>%s</code>\n\n⚧ <b>Gender:</b> %s\n👀 <b>Looking for:</b> %s\n📍 <b>Location:</b> %s\n\n💎 <b>Status:</b> %s",
+  "setup_complete": "✅ <b>Setup Complete!</b>",
+  "select_mood": "🎭 <b>Select Mood</b>\nChoose a topic:",
   "mood_dating": "🌹 Dating",
   "mood_deeptalk": "☕ Deep Talk",
   "mood_fun": "👻 Have Fun",
   "mood_debate": "🗣 Debate",
-  "joined_queue": "🔎 <b>Searching...</b>\nMode: <b>%s</b>\n\n<i>Please wait while we find a match for you.</i>",
-  "partner_found": "🎉 <b>PARTNER FOUND!</b>\n\nSay \"Hi\" to start the conversation! 👋\n<i>Type /stop to end the chat.</i>",
-  "chat_ended": "⛔ <b>Chat Ended</b>\nYou have disconnected.",
-  "partner_left": "⛔ <b>Partner Left</b>\nThe partner has ended the chat.",
+  "joined_queue": "🔎 <b>Searching...</b>\nMode: <b>%s</b>",
+  "partner_found": "🎉 <b>PARTNER FOUND!</b>\nSay \"Hi\"! 👋",
+  "chat_ended": "⛔ <b>Chat Ended</b>\nYou disconnected.",
+  "partner_left": "⛔ <b>Partner Left</b>\nPartner disconnected.",
   "partner_lost": "⚠️ <b>Error:</b> Connection lost.",
-  "about_text": "🤖 <b>About OtterChatbot</b>\n\nVersion: 1.0.0 (Beta)\nDeveloper: @YourUsername\n\nOtterChatbot connects you anonymously with people around the world.",
-  "help_text": "❓ <b>Help Center</b>\n\n<b>Commands:</b>\n/start - Main Menu\n/search - Find Partner\n/profile - Settings\n/stop - End Chat",
-  "error_generic": "❌ Something went wrong."
+  "vip_info": "🌟 <b>VIP MEMBERSHIP</b>\n\nUnlock exclusive features:\n✅ <b>Instant Reconnect:</b> Chat accidentally ended? Get them back!\n✅ <b>Priority Queue:</b> Find partners faster.\n✅ <b>No Cooldown:</b> Search immediately after stopping.\n✅ <b>VIP Badge:</b> Stand out with a profile badge.\n\n💸 <b>Pricing:</b>\n• $2 / 7 Days\n• $5 / 30 Days\n\n<i>Click below to buy:</i>",
+  "vip_pitch": "🔒 <b>VIP FEATURE LOCKED</b>\n\nOops! Only VIP members can reconnect with previous partners.\n\n<i>Upgrade now to unlock this feature!</i>",
+  "vip_contact_url": "https://t.me/USERNAME_ADMIN_ANDA",
+  "help_menu": "❓ <b>HELP CENTER</b>\nSelect a topic to learn more:",
+  "help_btn_basic": "📚 Basics",
+  "help_btn_cmd": "🤖 Commands",
+  "help_btn_rules": "🛡️ Safety Rules",
+  "help_content_basic": "📚 <b>Basic Guide</b>\n1. Setup your profile.\n2. Click Search.\n3. Choose a Mood.\n4. Chat anonymously!",
+  "help_content_cmd": "🤖 <b>Command List</b>\n/start - Main Menu\n/search - Find Partner\n/stop - End Chat\n/next - Find New Partner\n/vip - Upgrade Account",
+  "help_content_rules": "🛡️ <b>Safety Rules</b>\n• Do not share financial info.\n• Be respectful.\n• Harassment = Ban.",
+  "error_generic": "❌ Error."
 }
