--- a/locales/id.json
+++ b/locales/id.json
@@ -1,14 +1,14 @@
 {
-  "welcome_caption": "👋 <b>Selamat datang di OtterChatbot!</b>\n\nAku bisa bantuin kamu cari teman ngobrol anonim sesuai mood dan kriteria kamu.\n\n✨ <b>Fitur Utama:</b>\n• 🎭 Pilih Mood sesukamu\n• 🌍 Filter sesuai Negara\n• 🔒 100% Rahasia\n\n<i>Klik tombol di bawah untuk mulai:</i>",
-  "welcome_back": "👋 Halo lagi, <b>%s</b>! Mau ngapain hari ini?",
-  "ask_gender": "👤 <b>Atur Identitas</b>\nPertama, apa <b>Gender</b> kamu?",
-  "ask_preference": "👀 <b>Preferensi</b>\nKamu ingin ngobrol dengan siapa?",
-  "ask_location": "📍 <b>Lokasi</b>\nPilih Negaramu agar lebih akurat:",
+  "welcome_caption": "👋 <b>Selamat datang di OtterChatbot!</b>\n\nCari teman ngobrol anonim seru di sini.\n\n<i>Klik tombol di bawah untuk mulai:</i>",
+  "welcome_back": "👋 Halo lagi, <b>%s</b>!",
+  "ask_gender": "👤 <b>Identitas</b>\nPilih <b>Gender</b> kamu:",
+  "ask_preference": "👀 <b>Preferensi</b>\nIngin ngobrol dengan siapa?",
+  "ask_location": "📍 <b>Lokasi</b>\nPilih Negaramu:",
   "location_saved": "✅ Lokasi disimpan: <b>%s</b>",
-  "ask_lang": "🌐 <b>Pengaturan Bahasa</b>\nPilih bahasa tampilan:",
+  "ask_lang": "🌐 <b>Bahasa</b>\nPilih bahasa aplikasi:",
   "btn_search": "🔍 Cari Partner",
-  "btn_profile": "👤 Profil Saya",
-  "btn_about": "ℹ️ Tentang Bot",
+  "btn_profile": "👤 Profil",
+  "btn_vip": "🌟 Info VIP",
   "btn_help": "❓ Bantuan",
   "btn_male": "👨 Cowok",
   "btn_female": "👩 Cewek",
@@ -18,19 +18,29 @@
   "btn_edit_loc": "📍 Lokasi",
   "btn_lang": "🌐 Bahasa",
   "btn_back": "🔙 Kembali",
-  "profile_view": "👤 <b>PROFIL PENGGUNA</b>\n━━━━━━━━━━━━\n🆔 <b>Nama:</b> %s\n⚧ <b>Gender:</b> %s\n👀 <b>Mencari:</b> %s\n📍 <b>Lokasi:</b> %s\n💎 <b>Status:</b> %s\n━━━━━━━━━━━━",
-  "setup_complete": "✅ <b>Siap!</b>\nGunakan /search untuk mencari teman.",
+  "btn_reconnect": "🔄 Reconnect (VIP)",
+  "btn_contact_admin": "📩 Hubungi Admin",
+  "profile_view": "👤 <b>PROFIL SAYA</b>\n\n🆔 <code>%s</code>\n\n⚧ <b>Gender:</b> %s\n👀 <b>Mencari:</b> %s\n📍 <b>Lokasi:</b> %s\n\n💎 <b>Status:</b> %s",
+  "setup_complete": "✅ <b>Siap!</b>",
   "select_mood": "🎭 <b>Pilih Mood</b>\nPilih topik obrolanmu:",
   "mood_dating": "🌹 Cari Jodoh",
   "mood_deeptalk": "☕ Deep Talk",
   "mood_fun": "👻 Gabut / Seru",
   "mood_debate": "🗣 Debat",
-  "joined_queue": "🔎 <b>Sedang Mencari...</b>\nMode: <b>%s</b>\n\n<i>Mohon tunggu sebentar ya.</i>",
-  "partner_found": "🎉 <b>PASANGAN DITEMUKAN!</b>\n\nSapa \"Halo\" untuk memulai! 👋\n<i>Ketik /stop untuk udahan.</i>",
+  "joined_queue": "🔎 <b>Sedang Mencari...</b>\nMode: <b>%s</b>",
+  "partner_found": "🎉 <b>PASANGAN DITEMUKAN!</b>\nSapa \"Halo\"! 👋",
   "chat_ended": "⛔ <b>Obrolan Berakhir</b>\nKamu memutuskan koneksi.",
-  "partner_left": "⛔ <b>Pasangan Pergi</b>\nTeman chatmu mengakhiri obrolan.",
+  "partner_left": "⛔ <b>Pasangan Pergi</b>\nPartner mengakhiri obrolan.",
   "partner_lost": "⚠️ <b>Error:</b> Koneksi terputus.",
-  "about_text": "🤖 <b>Tentang OtterChatbot</b>\n\nVersi: 1.0.0 (Beta)\nDeveloper: @UsernameKamu\n\nBot ini mempertemukanmu dengan orang asing secara aman dan anonim.",
-  "help_text": "❓ <b>Pusat Bantuan</b>\n\n<b>Perintah:</b>\n/start - Menu Utama\n/search - Cari Teman\n/profile - Pengaturan\n/stop - Stop Chat",
-  "error_generic": "❌ Terjadi kesalahan."
+  "vip_info": "🌟 <b>MEMBER VIP</b>\n\nBuka fitur eksklusif:\n✅ <b>Instant Reconnect:</b> Menghubungi kembali mantan partner.\n✅ <b>Lencana VIP:</b> Profil terlihat keren.\n\n💸 <b>Harga Promo:</b>\n• Rp 10.000 / 7 Hari\n• Rp 25.000 / 30 Hari\n\n<i>Klik tombol di bawah untuk membeli:</i>",
+  "vip_pitch": "🔒 <b>FITUR TERKUNCI</b>\n\nUps! Fitur Reconnect hanya untuk member VIP.\nKamu bisa menghubungi kembali teman chat yang terputus jika upgrade.\n\n<i>Mau aktifkan VIP?</i>",
+  "vip_contact_url": "https://t.me/ilyabtr",
+  "help_menu": "❓ <b>PUSAT BANTUAN</b>\nPilih topik bantuan:",
+  "help_btn_basic": "📚 Dasar",
+  "help_btn_cmd": "🤖 Perintah",
+  "help_btn_rules": "🛡️ Aturan",
+  "help_content_basic": "📚 <b>Panduan Dasar</b>\n1. Isi profil kamu.\n2. Klik Cari Partner.\n3. Pilih Mood.\n4. Chatting aman & anonim!",
+  "help_content_cmd": "🤖 <b>Daftar Perintah</b>\n/start - Menu Utama\n/search - Cari Teman\n/stop - Stop Chat\n/next - Ganti Teman\n/vip - Info Upgrade",
+  "help_content_rules": "🛡️ <b>Aturan Main</b>\n• Dilarang minta uang/pulsa.\n• Sopan santun dijaga.\n• Spam/Iklan = Banned.",
+  "error_generic": "❌ Error."
 }
