--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,36 +1,46 @@
 {
-    "welcome_caption": "👋 <b>Добро пожаловать в OtterChatbot!</b>\n\nЯ помогу найти собеседника анонимно, в зависимости от твоего настроения.\n\n✨ <b>Функции:</b>\n• 🎭 Выбери настроение\n• 🌍 Фильтр по странам\n• 🔒 100% Анонимно\n\n<i>Нажми кнопку ниже, чтобы начать:</i>",
-    "welcome_back": "👋 С возвращением, <b>%s</b>!",
-    "ask_gender": "👤 <b>Настройка профиля</b>\nУкажи свой <b>пол</b>:",
-    "ask_preference": "👀 <b>Предпочтения</b>\nС кем хочешь общаться?",
-    "ask_location": "📍 <b>Локация</b>\nВыбери страну:",
-    "location_saved": "✅ Локация сохранена: <b>%s</b>",
-    "ask_lang": "🌐 <b>Язык</b>\nВыбери язык интерфейса:",
-    "btn_search": "🔍 Найти",
-    "btn_profile": "👤 Профиль",
-    "btn_about": "ℹ️ О боте",
-    "btn_help": "❓ Помощь",
-    "btn_male": "👨 М",
-    "btn_female": "👩 Ж",
-    "btn_both": "👫 Все",
-    "btn_edit_gender": "✏️ Пол",
-    "btn_edit_pref": "✏️ Поиск",
-    "btn_edit_loc": "📍 Страна",
-    "btn_lang": "🌐 Язык",
-    "btn_back": "🔙 Назад",
-    "profile_view": "👤 <b>ПРОФИЛЬ</b>\n━━━━━━━━━━━━\n🆔 <b>Имя:</b> %s\n⚧ <b>Пол:</b> %s\n👀 <b>Поиск:</b> %s\n📍 <b>Страна:</b> %s\n💎 <b>Статус:</b> %s\n━━━━━━━━━━━━",
-    "setup_complete": "✅ <b>Готово!</b>\nЖми /search для поиска.",
-    "select_mood": "🎭 <b>Выбери настроение:</b>",
-    "mood_dating": "🌹 Знакомства",
-    "mood_deeptalk": "☕ Разговор",
-    "mood_fun": "👻 Веселье",
-    "mood_debate": "🗣 Споры",
-    "joined_queue": "🔎 <b>Поиск собеседника...</b>\nРежим: <b>%s</b>",
-    "partner_found": "🎉 <b>Нашли собеседника!</b>\nСкажи \"Привет\"! 👋",
-    "chat_ended": "⛔ Чат завершен.",
-    "partner_left": "⛔ Собеседник покинул чат.",
-    "partner_lost": "⚠️ Ошибка связи.",
-    "about_text": "🤖 <b>О боте</b>\nАнонимный чат для всех.",
-    "help_text": "❓ <b>Помощь</b>\n/start - Меню\n/search - Поиск\n/profile - Профиль",
-    "error_generic": "❌ Ошибка."
-  }
+  "welcome_caption": "👋 <b>Добро пожаловать в OtterChatbot!</b>\n\nЯ помогу найти собеседника анонимно.\n\n<i>Нажми кнопку ниже, чтобы начать:</i>",
+  "welcome_back": "👋 С возвращением, <b>%s</b>!",
+  "ask_gender": "👤 <b>Настройка профиля</b>\nУкажи свой <b>пол</b>:",
+  "ask_preference": "👀 <b>Предпочтения</b>\nС кем хочешь общаться?",
+  "ask_location": "📍 <b>Локация</b>\nВыбери страну:",
+  "location_saved": "✅ Локация сохранена: <b>%s</b>",
+  "ask_lang": "🌐 <b>Язык</b>\nВыбери язык интерфейса:",
+  "btn_search": "🔍 Найти",
+  "btn_profile": "👤 Профиль",
+  "btn_vip": "🌟 VIP Доступ",
+  "btn_help": "❓ Помощь",
+  "btn_male": "👨 М",
+  "btn_female": "👩 Ж",
+  "btn_both": "👫 Все",
+  "btn_edit_gender": "✏️ Пол",
+  "btn_edit_pref": "✏️ Поиск",
+  "btn_edit_loc": "📍 Страна",
+  "btn_lang": "🌐 Язык",
+  "btn_back": "🔙 Назад",
+  "btn_reconnect": "🔄 Вернуть (VIP)",
+  "btn_contact_admin": "📩 Админ",
+  "profile_view": "👤 <b>МОЙ ПРОФИЛЬ</b>\n\n🆔 <code>%s</code>\n\n⚧ <b>Пол:</b> %s\n👀 <b>Поиск:</b> %s\n📍 <b>Страна:</b> %s\n\n💎 <b>Статус:</b> %s",
+  "setup_complete": "✅ <b>Готово!</b>",
+  "select_mood": "🎭 <b>Выбери настроение:</b>",
+  "mood_dating": "🌹 Знакомства",
+  "mood_deeptalk": "☕ Разговор",
+  "mood_fun": "👻 Веселье",
+  "mood_debate": "🗣 Споры",
+  "joined_queue": "🔎 <b>Поиск...</b>\nРежим: <b>%s</b>",
+  "partner_found": "🎉 <b>Нашли собеседника!</b>\nСкажи \"Привет\"! 👋",
+  "chat_ended": "⛔ Чат завершен.",
+  "partner_left": "⛔ Собеседник покинул чат.",
+  "partner_lost": "⚠️ Ошибка связи.",
+  "vip_info": "🌟 <b>VIP СТАТУС</b>\n\n✅ <b>Вернуть собеседника:</b> Если случайно вышли.\n✅ <b>Приоритет:</b> Быстрый поиск.\n✅ <b>Нет задержек:</b> Ищите сразу.\n✅ <b>VIP Значок:</b> Красивый профиль.\n\n💸 <b>Цена:</b>\n• $2 / 7 Дней\n• $5 / 30 Дней",
+  "vip_pitch": "🔒 <b>ТОЛЬКО ДЛЯ VIP</b>\n\nВернуть собеседника могут только VIP пользователи.\n\n<i>Обновитесь сейчас!</i>",
+  "vip_contact_url": "https://t.me/USERNAME_ADMIN_ANDA",
+  "help_menu": "❓ <b>ПОМОЩЬ</b>\nВыберите тему:",
+  "help_btn_basic": "📚 Основы",
+  "help_btn_cmd": "🤖 Команды",
+  "help_btn_rules": "🛡️ Правила",
+  "help_content_basic": "📚 <b>Основы</b>\n1. Заполни профиль.\n2. Жми Поиск.\n3. Выбери настроение.\n4. Общайся!",
+  "help_content_cmd": "🤖 <b>Команды</b>\n/start - Меню\n/search - Поиск\n/stop - Стоп\n/vip - VIP",
+  "help_content_rules": "🛡️ <b>Правила</b>\n• Будь вежлив.\n• Спам запрещен.",
+  "error_generic": "❌ Ошибка."
+}
