Feat: Integrasi Pembayaran Telegram Stars & Dynamic Pricing
- Feat: Implementasi PaymentHandler untuk Invoice, PreCheckout, dan SuccessfulPayment.
- Feat: Sistem 'Dynamic Pricing' menggunakan config/pricing.json (Ubah harga tanpa coding).
- Feat: Tombol VIP di bot sekarang otomatis mengikuti data dari JSON.
- Security: Menambahkan Anti-Replay Attack (cek Charge ID) untuk mencegah pembayaran ganda.
- Security: Validasi Payload saat PreCheckout untuk mencegah manipulasi paket.
- Refactor: Update handleCallback untuk memprioritaskan tombol 'buy:'.
- Refactor: Menambah struct Payment di types.go dan method Invoice di client.go.
- UI: Update locales untuk mendukung format teks harga dinamis.

--- a/locales/id.json
+++ b/locales/id.json
@@ -34,6 +34,11 @@
   "partner_lost": "⚠️ <b>Error:</b> Koneksi terputus.",
   "vip_info": "🌟 <b>MEMBER VIP</b>\n\nBuka fitur eksklusif:\n✅ <b>Instant Reconnect:</b> Menghubungi kembali mantan partner.\n✅ <b>Lencana VIP:</b> Profil terlihat keren.\n\n💸 <b>Harga Promo:</b>\n• Rp 10.000 / 7 Hari\n• Rp 25.000 / 30 Hari\n\n<i>Klik tombol di bawah untuk membeli:</i>",
   "vip_pitch": "🔒 <b>FITUR TERKUNCI</b>\n\nUps! Fitur Reconnect hanya untuk member VIP.\nKamu bisa menghubungi kembali teman chat yang terputus jika upgrade.\n\n<i>Mau aktifkan VIP?</i>",
+  "btn_buy_format": "⭐️ %d Hari (%d Stars)",
+  "vip_weekly_title": "Akses VIP Mingguan",
+  "vip_weekly_desc": "Akses penuh VIP selama 7 hari.",
+  "vip_monthly_title": "Akses VIP Bulanan",
+  "vip_monthly_desc": "Akses penuh VIP selama 30 hari. Paling Hemat!",
   "vip_contact_url": "https://t.me/ilyabtr",
   "help_menu": "❓ <b>PUSAT BANTUAN</b>\nPilih topik bantuan:",
   "help_btn_basic": "📚 Dasar",
