--- a/locales/en.json
+++ b/locales/en.json
@@ -35,6 +35,11 @@
   "vip_info": "🌟 <b>VIP MEMBERSHIP</b>\n\nUnlock exclusive features:\n✅ <b>Instant Reconnect:</b> Chat accidentally ended? Get them back!\n✅ <b>Priority Queue:</b> Find partners faster.\n✅ <b>No Cooldown:</b> Search immediately after stopping.\n✅ <b>VIP Badge:</b> Stand out with a profile badge.\n\n💸 <b>Pricing:</b>\n• $2 / 7 Days\n• $5 / 30 Days\n\n<i>Click below to buy:</i>",
   "vip_pitch": "🔒 <b>VIP FEATURE LOCKED</b>\n\nOops! Only VIP members can reconnect with previous partners.\n\n<i>Upgrade now to unlock this feature!</i>",
   "vip_contact_url": "https://t.me/USERNAME_ADMIN_ANDA",
+  "btn_buy_format": "⭐️ %d Days (%d Stars)",
+  "vip_weekly_title": "VIP Weekly Access",
+  "vip_weekly_desc": "Full VIP access for 7 days.",
+  "vip_monthly_title": "VIP Monthly Access",
+  "vip_monthly_desc": "Full VIP access for 30 days. Best Value!",
   "help_menu": "❓ <b>HELP CENTER</b>\nSelect a topic to learn more:",
   "help_btn_basic": "📚 Basics",
   "help_btn_cmd": "🤖 Commands",
