Fix: Enable Multimedia Support (Stickers, Photos, Voice)
- Fix: Menghapus filter 'Text Only' di HandleUpdate agar bot menerima semua jenis pesan.
- Feat: Implementasi API 'copyMessage' di Client & Types untuk meneruskan pesan persis aslinya.
- Refactor: Update logika relayMessage untuk menggunakan CopyMessage.
- Refactor: Update handleMessage agar aman menangani command saat input berupa media/stiker.

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,14 +1,14 @@
 {
-  "welcome_caption": "👋 <b>Welcome to OtterChatbot!</b>\n\nI can help you find a chat partner anonymously.\n\n<i>Tap a button below to start:</i>",
-  "welcome_back": "👋 Welcome back, <b>%s</b>!",
-  "ask_gender": "👤 <b>Identity</b>\nSelect your <b>Gender</b>:",
-  "ask_preference": "👀 <b>Preferences</b>\nWho do you want to chat with?",
-  "ask_location": "📍 <b>Location</b>\nSelect your Country:",
+  "welcome_caption": "👋 <b>Welcome to OtterChatbot!</b>\n\nAn <i>Anonymous Chat</i> bot that connects you with new people based on chat topics.\n\n✨ <b>Why OtterChatbot?</b>\n• 🔒 <b>100% Private:</b> Your identity is secret.\n• 🌍 <b>Global:</b> Meet friends from various countries.\n• 🎭 <b>Fun Topics:</b> From dating to debates.\n\n<i>Ready to start? Click the button below:</i>",
+  "welcome_back": "👋 Welcome back, <b>%s</b>! Ready to chat?",
+  "ask_gender": "👤 <b>Identity Setup</b>\nHelp us find the right partner.\nWhat is your <b>Gender</b>?",
+  "ask_preference": "👀 <b>Search Preference</b>\nWho do you want to connect with?",
+  "ask_location": "📍 <b>Location</b>\nSelect your Country for better matching:",
   "location_saved": "✅ Location updated: <b>%s</b>",
-  "ask_lang": "🌐 <b>Language</b>\nSelect interface language:",
-  "btn_search": "🔍 Search Partner",
-  "btn_profile": "👤 Profile",
-  "btn_vip": "🌟 VIP Access",
+  "ask_lang": "🌐 <b>Language Settings</b>\nSelect interface language:",
+  "btn_search": "🔍 Find Partner",
+  "btn_profile": "👤 My Profile",
+  "btn_vip": "🌟 Upgrade VIP",
   "btn_help": "❓ Help Center",
   "btn_male": "👨 Male",
   "btn_female": "👩 Female",
@@ -20,32 +20,33 @@
   "btn_back": "🔙 Back",
   "btn_reconnect": "🔄 Reconnect (VIP)",
   "btn_contact_admin": "📩 Contact Admin",
-  "profile_view": "👤 <b>MY PROFILE</b>\n\n🆔 <code>%s</code>\n\n⚧ <b>Gender:</b> %s\n👀 <b>Looking for:</b> %s\n📍 <b>Location:</b> %s\n\n💎 <b>Status:</b> %s",
-  "setup_complete": "✅ <b>Setup Complete!</b>",
-  "select_mood": "🎭 <b>Select Mood</b>\nChoose a topic:",
-  "mood_dating": "🌹 Dating",
-  "mood_deeptalk": "☕ Deep Talk",
-  "mood_fun": "👻 Have Fun",
-  "mood_debate": "🗣 Debate",
-  "joined_queue": "🔎 <b>Searching...</b>\nMode: <b>%s</b>",
-  "partner_found": "🎉 <b>PARTNER FOUND!</b>\nSay \"Hi\"! 👋",
-  "chat_ended": "⛔ <b>Chat Ended</b>\nYou disconnected.",
-  "partner_left": "⛔ <b>Partner Left</b>\nPartner disconnected.",
-  "partner_lost": "⚠️ <b>Error:</b> Connection lost.",
-  "vip_info": "🌟 <b>VIP MEMBERSHIP</b>\n\nUnlock exclusive features:\n✅ <b>Instant Reconnect:</b> Chat accidentally ended? Get them back!\n✅ <b>Priority Queue:</b> Find partners faster.\n✅ <b>No Cooldown:</b> Search immediately after stopping.\n✅ <b>VIP Badge:</b> Stand out with a profile badge.\n\n💸 <b>Pricing:</b>\n• $2 / 7 Days\n• $5 / 30 Days\n\n<i>Click below to buy:</i>",
-  "vip_pitch": "🔒 <b>VIP FEATURE LOCKED</b>\n\nOops! Only VIP members can reconnect with previous partners.\n\n<i>Upgrade now to unlock this feature!</i>",
-  "vip_contact_url": "https://t.me/USERNAME_ADMIN_ANDA",
+  "profile_view": "👤 <b>MY PROFILE</b>\n━━━━━━━━━━━━━━━━\n🆔 Name: <code>%s</code>\n⚧ Gender: <b>%s</b>\n👀 Looking for: <b>%s</b>\n📍 Location: <b>%s</b>\n\n💎 Status: <b>%s</b>\n━━━━━━━━━━━━━━━━",
+  "setup_complete": "✅ <b>Profile Ready!</b>\nYou can now start searching for friends.",
+  "select_mood": "🎭 <b>Select Chat Topic</b>\nWhat is your goal today?",
+  "mood_dating": "🌹 Dating / Romance",
+  "mood_deeptalk": "☕ Vent / Deep Talk",
+  "mood_fun": "👻 Bored / Have Fun",
+  "mood_debate": "🗣 Debate / Discuss",
+  "joined_queue": "🔎 <b>Searching for Partner...</b>\nTopic: <b>%s</b>\n\n<i>Please wait, scanning the server...</i>",
+  "partner_found": "🎉 <b>PARTNER FOUND!</b>\n\nSay \"Hi\" to start chatting! 👋\n<i>Type /stop to end this session.</i>",
+  "chat_ended": "⛔ <b>Session Ended</b>\nYou disconnected.",
+  "partner_left": "⛔ <b>Partner Left</b>\nYour chat partner has disconnected.",
+  "partner_lost": "⚠️ <b>Connection Lost</b>\nSorry, a network error occurred.",
+  "vip_info": "🌟 <b>VIP MEMBERSHIP</b>\n\nEnjoy limitless features:\n\n✅ <b>Instant Reconnect:</b> Disconnected? Call back your last partner.\n✅ <b>Priority Queue:</b> Get matches faster than free users.\n✅ <b>Strict Filter:</b> Gender filter remains active in Fun/Debate modes.\n\n💸 <b>Choose a Plan:</b>",
+  "vip_pitch": "🔒 <b>FEATURE LOCKED</b>\n\nOh no... Your partner is gone!\nOnly <b>VIP Members</b> can use the <b>Reconnect</b> button to call them back.\n\n<i>Upgrade now to unlock this feature!</i>",
   "btn_buy_format": "⭐️ %d Days (%d Stars)",
-  "vip_weekly_title": "VIP Weekly Access",
+  "vip_weekly_title": "Weekly Plan",
   "vip_weekly_desc": "Full VIP access for 7 days.",
-  "vip_monthly_title": "VIP Monthly Access",
-  "vip_monthly_desc": "Full VIP access for 30 days. Best Value!",
-  "help_menu": "❓ <b>HELP CENTER</b>\nSelect a topic to learn more:",
-  "help_btn_basic": "📚 Basics",
-  "help_btn_cmd": "🤖 Commands",
-  "help_btn_rules": "🛡️ Safety Rules",
-  "help_content_basic": "📚 <b>Basic Guide</b>\n1. Setup your profile.\n2. Click Search.\n3. Choose a Mood.\n4. Chat anonymously!",
-  "help_content_cmd": "🤖 <b>Command List</b>\n/start - Main Menu\n/search - Find Partner\n/stop - End Chat\n/next - Find New Partner\n/vip - Upgrade Account",
-  "help_content_rules": "🛡️ <b>Safety Rules</b>\n• Do not share financial info.\n• Be respectful.\n• Harassment = Ban.",
-  "error_generic": "❌ Error."
+  "vip_monthly_title": "Monthly Plan",
+  "vip_monthly_desc": "Full VIP access for 30 days (Best Value!).",
+  "vip_contact_url": "https://t.me/ilyabtr",
+  "help_menu": "❓ <b>HELP CENTER</b>\nConfused? Select a topic below:",
+  "help_btn_basic": "📚 How to Use",
+  "help_btn_cmd": "🤖 Command List",
+  "help_btn_rules": "🛡️ Rules & Ethics",
+  "help_content_basic": "📚 <b>Beginner Guide</b>\n\n1️⃣ <b>Fill Profile:</b> Ensure Gender and Preferences are set.\n2️⃣ <b>Start:</b> Click <b>🔍 Find Partner</b> on the main menu.\n3️⃣ <b>Choose Topic:</b> Pick a topic (Dating, Fun, etc).\n4️⃣ <b>Chatting:</b> Wait for a match & start talking!\n5️⃣ <b>Finish:</b> Type <code>/stop</code> to change partners.",
+  "help_content_cmd": "🤖 <b>Command List</b>\n\n• <code>/start</code> : Open Main Menu / Restart Bot\n• <code>/search</code> : Quick shortcut to find partner\n• <code>/stop</code> : End current chat\n• <code>/next</code> : End & search new partner immediately\n• <code>/profile</code> : View & edit profile\n• <code>/vip</code> : VIP purchase info\n• <code>/reconnect</code> : (VIP) Reconnect with last partner",
+  "help_content_rules": "🛡️ <b>Community Rules</b>\n\nFor everyone's comfort, prohibited:\n❌ Spam, Ads, or Promotions.\n❌ Scams or asking for money.\n❌ Illegal content or child exploitation.\n❌ Verbal abuse/harassment.\n\n<i>Violations will result in a Permanent Ban.</i>",
+  "about_text": "🤖 <b>About OtterChatbot</b>\n\nVersion: 2.0 (Stable)\nDeveloper: @ilyabtr\n\nThis bot is designed to connect people anonymously yet purposefully. We do not store your chat contents.",
+  "error_generic": "❌ System error occurred."
 }
