--- a/locales/id.json
+++ b/locales/id.json
@@ -1,15 +1,15 @@
 {
-  "welcome_caption": "👋 <b>Selamat datang di OtterChatbot!</b>\n\nCari teman ngobrol anonim seru di sini.\n\n<i>Klik tombol di bawah untuk mulai:</i>",
-  "welcome_back": "👋 Halo lagi, <b>%s</b>!",
-  "ask_gender": "👤 <b>Identitas</b>\nPilih <b>Gender</b> kamu:",
-  "ask_preference": "👀 <b>Preferensi</b>\nIngin ngobrol dengan siapa?",
-  "ask_location": "📍 <b>Lokasi</b>\nPilih Negaramu:",
-  "location_saved": "✅ Lokasi disimpan: <b>%s</b>",
-  "ask_lang": "🌐 <b>Bahasa</b>\nPilih bahasa aplikasi:",
+  "welcome_caption": "👋 <b>Selamat Datang di OtterChatbot!</b>\n\nBot <i>Anonim Chat</i> yang mempertemukanmu dengan orang baru berdasarkan topik obrolan.\n\n✨ <b>Kenapa OtterChatbot?</b>\n• 🔒 <b>Privasi 100%:</b> Identitasmu rahasia.\n• 🌍 <b>Global:</b> Temukan teman dari berbagai negara.\n• 🎭 <b>Topik Seru:</b> Dari cari jodoh sampai debat.\n\n<i>Siap memulai? Klik tombol di bawah:</i>",
+  "welcome_back": "👋 Halo lagi, <b>%s</b>! Siap ngobrol lagi?",
+  "ask_gender": "👤 <b>Identitas Diri</b>\nBantu kami mencarikan partner yang tepat.\nApa <b>Gender</b> kamu?",
+  "ask_preference": "👀 <b>Preferensi Pencarian</b>\nKamu ingin dihubungkan dengan siapa?",
+  "ask_location": "📍 <b>Lokasi</b>\nPilih Negaramu agar pencarian lebih akurat:",
+  "location_saved": "✅ Lokasi diperbarui: <b>%s</b>",
+  "ask_lang": "🌐 <b>Pengaturan Bahasa</b>\nPilih bahasa antarmuka:",
   "btn_search": "🔍 Cari Partner",
-  "btn_profile": "👤 Profil",
-  "btn_vip": "🌟 Info VIP",
-  "btn_help": "❓ Bantuan",
+  "btn_profile": "👤 Profil Saya",
+  "btn_vip": "🌟 Upgrade VIP",
+  "btn_help": "❓ Pusat Bantuan",
   "btn_male": "👨 Cowok",
   "btn_female": "👩 Cewek",
   "btn_both": "👫 Keduanya",
@@ -20,32 +20,33 @@
   "btn_back": "🔙 Kembali",
   "btn_reconnect": "🔄 Reconnect (VIP)",
   "btn_contact_admin": "📩 Hubungi Admin",
-  "profile_view": "👤 <b>PROFIL SAYA</b>\n\n🆔 <code>%s</code>\n\n⚧ <b>Gender:</b> %s\n👀 <b>Mencari:</b> %s\n📍 <b>Lokasi:</b> %s\n\n💎 <b>Status:</b> %s",
-  "setup_complete": "✅ <b>Siap!</b>",
-  "select_mood": "🎭 <b>Pilih Mood</b>\nPilih topik obrolanmu:",
+  "profile_view": "👤 <b>PROFIL SAYA</b>\n\n🆔 Nama: <code>%s</code>\n⚧ Gender: <b>%s</b>\n👀 Mencari: <b>%s</b>\n📍 Lokasi: <b>%s</b>\n\n💎 Status: <b>%s</b>",
+  "setup_complete": "✅ <b>Profil Siap!</b>\nSekarang kamu bisa mulai mencari teman.",
+  "select_mood": "🎭 <b>Pilih Topik Obrolan</b>\nApa tujuanmu ngobrol hari ini?",
   "mood_dating": "🌹 Cari Jodoh",
-  "mood_deeptalk": "☕ Deep Talk",
-  "mood_fun": "👻 Gabut / Seru",
+  "mood_deeptalk": "☕ Curhat",
+  "mood_fun": "👻 Gabut",
   "mood_debate": "🗣 Debat",
-  "joined_queue": "🔎 <b>Sedang Mencari...</b>\nMode: <b>%s</b>",
-  "partner_found": "🎉 <b>PASANGAN DITEMUKAN!</b>\nSapa \"Halo\"! 👋",
-  "chat_ended": "⛔ <b>Obrolan Berakhir</b>\nKamu memutuskan koneksi.",
-  "partner_left": "⛔ <b>Pasangan Pergi</b>\nPartner mengakhiri obrolan.",
-  "partner_lost": "⚠️ <b>Error:</b> Koneksi terputus.",
-  "vip_info": "🌟 <b>MEMBER VIP</b>\n\nBuka fitur eksklusif:\n✅ <b>Instant Reconnect:</b> Menghubungi kembali mantan partner.\n✅ <b>Lencana VIP:</b> Profil terlihat keren.\n\n💸 <b>Harga Promo:</b>\n• Rp 10.000 / 7 Hari\n• Rp 25.000 / 30 Hari\n\n<i>Klik tombol di bawah untuk membeli:</i>",
-  "vip_pitch": "🔒 <b>FITUR TERKUNCI</b>\n\nUps! Fitur Reconnect hanya untuk member VIP.\nKamu bisa menghubungi kembali teman chat yang terputus jika upgrade.\n\n<i>Mau aktifkan VIP?</i>",
+  "joined_queue": "🔎 <b>Mencari Partner...</b>\nTopik: <b>%s</b>\n\n<i>Mohon tunggu sebentar, sedang menyisir server...</i>",
+  "partner_found": "🎉 <b>PASANGAN DITEMUKAN!</b>\n\nSapa \"Halo\" untuk memulai obrolan! 👋\n<i>Ketik /stop untuk mengakhiri sesi ini.</i>",
+  "chat_ended": "⛔ <b>Sesi Berakhir</b>\nKamu memutuskan koneksi.",
+  "partner_left": "⛔ <b>Partner Pergi</b>\nTeman chatmu telah meninggalkan obrolan.",
+  "partner_lost": "⚠️ <b>Koneksi Terputus</b>\nMaaf, terjadi gangguan jaringan.",
+  "vip_info": "🌟 <b>MEMBER VIP</b>\n\nNikmati fitur tanpa batas:\n\n✅ <b>Instant Reconnect:</b> Terputus? Hubungi kembali partner terakhirmu.\n✅ <b>Antrian Prioritas:</b> Dapatkan teman chat lebih cepat dari user gratisan.\n✅ <b>Filter Ketat:</b> Tetap bisa filter gender di mode Gabut/Debat.\n\n💸 <b>Pilih Paket Hemat:</b>",
+  "vip_pitch": "🔒 <b>FITUR TERKUNCI</b>\n\nYah... Partner kamu hilang!\nHanya <b>Member VIP</b> yang bisa menggunakan tombol <b>Reconnect</b> untuk memanggil mereka kembali.\n\n<i>Upgrade sekarang untuk membuka fitur ini!</i>",
   "btn_buy_format": "⭐️ %d Hari (%d Stars)",
-  "vip_weekly_title": "Akses VIP Mingguan",
-  "vip_weekly_desc": "Akses penuh VIP selama 7 hari.",
-  "vip_monthly_title": "Akses VIP Bulanan",
-  "vip_monthly_desc": "Akses penuh VIP selama 30 hari. Paling Hemat!",
+  "vip_weekly_title": "Paket Mingguan",
+  "vip_weekly_desc": "Akses VIP penuh selama 7 hari.",
+  "vip_monthly_title": "Paket Bulanan",
+  "vip_monthly_desc": "Akses VIP penuh 30 hari (Hemat!).",
   "vip_contact_url": "https://t.me/ilyabtr",
-  "help_menu": "❓ <b>PUSAT BANTUAN</b>\nPilih topik bantuan:",
-  "help_btn_basic": "📚 Dasar",
-  "help_btn_cmd": "🤖 Perintah",
-  "help_btn_rules": "🛡️ Aturan",
-  "help_content_basic": "📚 <b>Panduan Dasar</b>\n1. Isi profil kamu.\n2. Klik Cari Partner.\n3. Pilih Mood.\n4. Chatting aman & anonim!",
-  "help_content_cmd": "🤖 <b>Daftar Perintah</b>\n/start - Menu Utama\n/search - Cari Teman\n/stop - Stop Chat\n/next - Ganti Teman\n/vip - Info Upgrade",
-  "help_content_rules": "🛡️ <b>Aturan Main</b>\n• Dilarang minta uang/pulsa.\n• Sopan santun dijaga.\n• Spam/Iklan = Banned.",
-  "error_generic": "❌ Error."
+  "help_menu": "❓ <b>PUSAT BANTUAN</b>\nBingung cara pakainya? Pilih topik di bawah:",
+  "help_btn_basic": "📚 Cara Pakai",
+  "help_btn_cmd": "🤖 Daftar Perintah",
+  "help_btn_rules": "🛡️ Aturan & Etika",
+  "help_content_basic": "📚 <b>Panduan Pemula</b>\n\n1️⃣ <b>Isi Profil:</b> Pastikan Gender dan Preferensi sudah sesuai.\n2️⃣ <b>Mulai:</b> Klik tombol <b>🔍 Cari Partner</b> di menu utama.\n3️⃣ <b>Pilih Topik:</b> Pilih topik (Dating, Gabut, dll).\n4️⃣ <b>Chatting:</b> Tunggu partner ditemukan & mulailah mengobrol!\n5️⃣ <b>Selesai:</b> Ketik <code>/stop</code> jika ingin ganti orang.",
+  "help_content_cmd": "🤖 <b>Daftar Perintah (Commands)</b>\n\n• <code>/start</code> : Membuka Menu Utama / Restart Bot\n• <code>/search</code> : Pintasan cepat mencari teman\n• <code>/stop</code> : Memutus obrolan saat ini\n• <code>/next</code> : Putus & langsung cari yang baru\n• <code>/profile</code> : Melihat & edit profil\n• <code>/vip</code> : Info pembelian VIP\n• <code>/reconnect</code> : (VIP) Menghubungkan partner terakhir",
+  "help_content_rules": "🛡️ <b>Aturan Komunitas</b>\n\nDemi kenyamanan bersama, dilarang:\n❌ Spam, Iklan, atau Promosi.\n❌ Penipuan atau meminta uang.\n❌ Konten ilegal atau pornografi anak.\n❌ Kekerasan verbal/pelecehan.\n\n<i>Pelanggaran akan mengakibatkan Ban Permanen.</i>",
+  "about_text": "🤖 <b>Tentang OtterChatbot</b>\n\nVersi: 2.0 (Stable)\nDeveloper: @ilyabtr\n\nBot ini dibuat untuk menghubungkan orang-orang secara acak namun terarah. Kami tidak menyimpan isi chat Anda.",
+  "error_generic": "❌ Terjadi kesalahan sistem."
 }
