--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,14 +1,14 @@
 {
-  "welcome_caption": "👋 <b>Добро пожаловать в OtterChatbot!</b>\n\nЯ помогу найти собеседника анонимно.\n\n<i>Нажми кнопку ниже, чтобы начать:</i>",
-  "welcome_back": "👋 С возвращением, <b>%s</b>!",
-  "ask_gender": "👤 <b>Настройка профиля</b>\nУкажи свой <b>пол</b>:",
-  "ask_preference": "👀 <b>Предпочтения</b>\nС кем хочешь общаться?",
-  "ask_location": "📍 <b>Локация</b>\nВыбери страну:",
-  "location_saved": "✅ Локация сохранена: <b>%s</b>",
-  "ask_lang": "🌐 <b>Язык</b>\nВыбери язык интерфейса:",
-  "btn_search": "🔍 Найти",
-  "btn_profile": "👤 Профиль",
-  "btn_vip": "🌟 VIP Доступ",
+  "welcome_caption": "👋 <b>Добро пожаловать в OtterChatbot!</b>\n\nБот для <i>анонимного чата</i>, который соединяет вас с новыми людьми по интересам.\n\n✨ <b>Почему OtterChatbot?</b>\n• 🔒 <b>100% Приватно:</b> Твоя личность скрыта.\n• 🌍 <b>Глобально:</b> Находи друзей из разных стран.\n• 🎭 <b>Темы:</b> От свиданий до жарких споров.\n\n<i>Готов начать? Жми кнопку ниже:</i>",
+  "welcome_back": "👋 С возвращением, <b>%s</b>! Готов общаться?",
+  "ask_gender": "👤 <b>Твоя Личность</b>\nПомоги нам подобрать пару.\nУкажи свой <b>Пол</b>:",
+  "ask_preference": "👀 <b>Поиск</b>\nС кем ты хочешь общаться?",
+  "ask_location": "📍 <b>Локация</b>\nВыбери страну для точного поиска:",
+  "location_saved": "✅ Локация обновлена: <b>%s</b>",
+  "ask_lang": "🌐 <b>Язык</b>\nВыберите язык интерфейса:",
+  "btn_search": "🔍 Найти собеседника",
+  "btn_profile": "👤 Мой Профиль",
+  "btn_vip": "🌟 Купить VIP",
   "btn_help": "❓ Помощь",
   "btn_male": "👨 М",
   "btn_female": "👩 Ж",
@@ -20,27 +20,33 @@
   "btn_back": "🔙 Назад",
   "btn_reconnect": "🔄 Вернуть (VIP)",
   "btn_contact_admin": "📩 Админ",
-  "profile_view": "👤 <b>МОЙ ПРОФИЛЬ</b>\n\n🆔 <code>%s</code>\n\n⚧ <b>Пол:</b> %s\n👀 <b>Поиск:</b> %s\n📍 <b>Страна:</b> %s\n\n💎 <b>Статус:</b> %s",
-  "setup_complete": "✅ <b>Готово!</b>",
-  "select_mood": "🎭 <b>Выбери настроение:</b>",
-  "mood_dating": "🌹 Знакомства",
-  "mood_deeptalk": "☕ Разговор",
-  "mood_fun": "👻 Веселье",
-  "mood_debate": "🗣 Споры",
-  "joined_queue": "🔎 <b>Поиск...</b>\nРежим: <b>%s</b>",
-  "partner_found": "🎉 <b>Нашли собеседника!</b>\nСкажи \"Привет\"! 👋",
-  "chat_ended": "⛔ Чат завершен.",
-  "partner_left": "⛔ Собеседник покинул чат.",
-  "partner_lost": "⚠️ Ошибка связи.",
-  "vip_info": "🌟 <b>VIP СТАТУС</b>\n\n✅ <b>Вернуть собеседника:</b> Если случайно вышли.\n✅ <b>Приоритет:</b> Быстрый поиск.\n✅ <b>Нет задержек:</b> Ищите сразу.\n✅ <b>VIP Значок:</b> Красивый профиль.\n\n💸 <b>Цена:</b>\n• $2 / 7 Дней\n• $5 / 30 Дней",
-  "vip_pitch": "🔒 <b>ТОЛЬКО ДЛЯ VIP</b>\n\nВернуть собеседника могут только VIP пользователи.\n\n<i>Обновитесь сейчас!</i>",
-  "vip_contact_url": "https://t.me/USERNAME_ADMIN_ANDA",
-  "help_menu": "❓ <b>ПОМОЩЬ</b>\nВыберите тему:",
-  "help_btn_basic": "📚 Основы",
+  "profile_view": "👤 <b>МОЙ ПРОФИЛЬ</b>\n━━━━━━━━━━━━━━━━\n🆔 Имя: <code>%s</code>\n⚧ Пол: <b>%s</b>\n👀 Поиск: <b>%s</b>\n📍 Страна: <b>%s</b>\n\n💎 Статус: <b>%s</b>\n━━━━━━━━━━━━━━━━",
+  "setup_complete": "✅ <b>Профиль готов!</b>\nТеперь можно искать собеседника.",
+  "select_mood": "🎭 <b>Выбери Тему</b>\nО чем хочешь поговорить?",
+  "mood_dating": "🌹 Знакомства / Романтика",
+  "mood_deeptalk": "☕ Поговорить по душам",
+  "mood_fun": "👻 Скучно / Веселье",
+  "mood_debate": "🗣 Споры / Дискуссии",
+  "joined_queue": "🔎 <b>Поиск собеседника...</b>\nТема: <b>%s</b>\n\n<i>Подождите, сканируем сервер...</i>",
+  "partner_found": "🎉 <b>СОБЕСЕДНИК НАЙДЕН!</b>\n\nСкажи \"Привет\"! 👋\n<i>Напиши /stop чтобы закончить.</i>",
+  "chat_ended": "⛔ <b>Сессия Завершена</b>\nВы отключились.",
+  "partner_left": "⛔ <b>Собеседник Ушел</b>\nТвой партнер покинул чат.",
+  "partner_lost": "⚠️ <b>Ошибка Связи</b>\nИзвините, проблема с сетью.",
+  "vip_info": "🌟 <b>VIP СТАТУС</b>\n\nНаслаждайся без ограничений:\n\n✅ <b>Мгновенный Возврат:</b> Вылетел? Верни собеседника.\n✅ <b>Приоритет:</b> Находи пару быстрее, чем бесплатные юзеры.\n✅ <b>Строгий Фильтр:</b> Фильтр пола работает даже в темах Веселье/Споры.\n\n💸 <b>Выберите тариф:</b>",
+  "vip_pitch": "🔒 <b>ФУНКЦИЯ ЗАКРЫТА</b>\n\nОй... Собеседник пропал!\nТолько <b>VIP участники</b> могут использовать кнопку <b>Вернуть</b>.\n\n<i>Обновитесь сейчас, чтобы открыть функцию!</i>",
+  "btn_buy_format": "⭐️ %d Дней (%d Stars)",
+  "vip_weekly_title": "Недельный план",
+  "vip_weekly_desc": "Полный VIP доступ на 7 дней.",
+  "vip_monthly_title": "Месячный план",
+  "vip_monthly_desc": "Полный VIP на 30 дней (Выгодно!).",
+  "vip_contact_url": "https://t.me/ilyabtr",
+  "help_menu": "❓ <b>ЦЕНТР ПОМОЩИ</b>\nЗапутались? Выберите тему ниже:",
+  "help_btn_basic": "📚 Как начать",
   "help_btn_cmd": "🤖 Команды",
   "help_btn_rules": "🛡️ Правила",
-  "help_content_basic": "📚 <b>Основы</b>\n1. Заполни профиль.\n2. Жми Поиск.\n3. Выбери настроение.\n4. Общайся!",
-  "help_content_cmd": "🤖 <b>Команды</b>\n/start - Меню\n/search - Поиск\n/stop - Стоп\n/vip - VIP",
-  "help_content_rules": "🛡️ <b>Правила</b>\n• Будь вежлив.\n• Спам запрещен.",
-  "error_generic": "❌ Ошибка."
+  "help_content_basic": "📚 <b>Инструкция для новичков</b>\n\n1️⃣ <b>Профиль:</b> Проверь пол и кого ищешь.\n2️⃣ <b>Старт:</b> Жми <b>🔍 Найти</b> в меню.\n3️⃣ <b>Тема:</b> Выбери тему (Знакомства и др).\n4️⃣ <b>Чат:</b> Жди пару и начинай общаться!\n5️⃣ <b>Финиш:</b> Пиши <code>/stop</code> для смены партнера.",
+  "help_content_cmd": "🤖 <b>Список Команд</b>\n\n• <code>/start</code> : Главное меню / Перезапуск\n• <code>/search</code> : Быстрый поиск\n• <code>/stop</code> : Остановить текущий чат\n• <code>/next</code> : Сбросить и искать нового\n• <code>/profile</code> : Настройки профиля\n• <code>/vip</code> : Инфо о покупке VIP\n• <code>/reconnect</code> : (VIP) Вернуть последнего",
+  "help_content_rules": "🛡️ <b>Правила Сообщества</b>\n\nРади комфорта всех запрещено:\n❌ Спам, Реклама.\n❌ Мошенничество / просьбы денег.\n❌ Незаконный контент.\n❌ Оскорбления / Агрессия.\n\n<i>Нарушители получат Бан Навсегда.</i>",
+  "about_text": "🤖 <b>О боте OtterChatbot</b>\n\nВерсия: 2.0 (Stable)\nРазработчик: @ilyabtr\n\nБот создан для анонимного, но целенаправленного общения. Мы не храним историю вашей переписки.",
+  "error_generic": "❌ Ошибка системы."
 }
